# core

./: .copier-answers.yml  .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  biome.json  components.json  db.sqlite3  docker-compose.yml  docker_startup.sh  entrypoint.sh  manage.py  package-lock.json  package.json  prod.Dockerfile  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.js
.github/workflows/: pull_request.yaml
.husky/: pre-push
deploy/nginx/: default.conf
fixtures/: drag_and_drop.xlsx  exam_session.json  fill_in_the_blank.xlsx  matching.xlsx  open_ended.xlsx  question_quiz.json  quiz.json  statements.xlsx  true_false_quiz.json
fixtures/quizzes/: drag_and_drop.json  dran_and_drop.json  fill_in_the_blank.json  matching.json  open_ended.json  question.json  statement.json
frontend/css/: tailwind.css
frontend/js/: global.d.ts  main.tsx
nginx/: Dockerfile
open_ithageneia/: admin.py  apps.py  asgi.py  managers.py  middleware.py  models.py  settings.py  settings_local_docker.py  settings_production.py  urls.py  utils.py  views.py  wsgi.py
open_ithageneia/admin/: __init__.py
open_ithageneia/managers/: __init__.py  shared.py
quiz/: admin.py  apps.py  constants.py  filters.py  forms.py  managers.py  models.py  resources.py  schemas.py  serializers.py  services.py  urls.py  views.py  viewsets.py
scripts/: generate_sample_drag_and_drop_xlsx.py  generate_sample_fill_in_the_blank_xlsx.py  generate_sample_matching_xlsx.py  generate_sample_statements_xlsx.py  run_prod_local.sh
templates/: base.html
(+198 files in other folders)
